--- a/whiteboard.html
+++ b/whiteboard.html
@@ -3,23 +3,113 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Whiteboard - Valiant Vision</title>
+<title>Valiant Vision Whiteboard</title>
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&family=Lora:wght@400;700&display=swap" rel="stylesheet">
 <style>
-body {margin:0;font-family:'Lora', serif;background:#f4f4f7; display:flex; flex-direction:column; align-items:center;}
-#whiteboard-container{max-width:1100px;margin:20px auto;padding:0 20px;width:100%;}
-#whiteboard-tools{display:flex; gap:10px; flex-wrap:wrap; margin-bottom:10px;}
-#whiteboard-tools button, #whiteboard-tools input[type=color], #whiteboard-tools input[type=number]{padding:6px 12px; border-radius:8px; border:none; cursor:pointer;}
-#whiteboard{border:2px solid #333; border-radius:12px; touch-action: none; width:100%; height:600px; background:#fff; display:block;}
+:root{
+  --vv-green:#00c853;
+  --vv-dark:#1a1a1a;
+  --vv-light:#f4f4f7;
+  --vv-accent:#6200ea;
+  --vv-red:#e53935;
+  --vv-yellow:#ffeb3b;
+}
+
+body {
+  margin:0;
+  font-family:'Lora', serif;
+  background: var(--vv-light);
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+}
+
+#whiteboard-container{
+  max-width:1300px;
+  margin:20px auto;
+  padding:0 20px;
+  width:100%;
+}
+
+h2{
+  text-align:center;
+  color: var(--vv-dark);
+  margin-bottom:15px;
+}
+
+#whiteboard-tools{
+  display:flex;
+  flex-wrap:wrap;
+  gap:10px;
+  margin-bottom:10px;
+  justify-content:center;
+}
+
+#whiteboard-tools button, #whiteboard-tools input[type=color], #whiteboard-tools input[type=number], #whiteboard-tools select{
+  padding:8px 14px;
+  border-radius:8px;
+  border:none;
+  cursor:pointer;
+  font-weight:600;
+  background:var(--vv-green);
+  color:white;
+  transition:0.2s;
+}
+#whiteboard-tools button:hover{
+  background:var(--vv-accent);
+}
+
+#whiteboard{
+  border:2px solid var(--vv-dark);
+  border-radius:12px;
+  touch-action:none;
+  width:100%;
+  height:700px;
+  background:#fff;
+  display:block;
+}
+
+.sticky-note{
+  position:absolute;
+  background:#fffb8f;
+  padding:10px;
+  border:2px solid #f0e130;
+  border-radius:8px;
+  resize:both;
+  overflow:auto;
+  min-width:120px;
+  min-height:60px;
+  cursor:move;
+  box-shadow:0 4px 6px rgba(0,0,0,0.1);
+}
+.note-header{
+  cursor:move;
+  font-weight:bold;
+  margin-bottom:5px;
+  display:flex;
+  justify-content:space-between;
+}
+.note-header button{
+  background:var(--vv-red);
+  color:white;
+  border:none;
+  border-radius:4px;
+  padding:0 5px;
+  cursor:pointer;
+}
 </style>
 </head>
 <body>
 
 <div id="whiteboard-container">
-  <h2>Interactive Whiteboard</h2>
+  <h2>Valiant Vision Professional Whiteboard</h2>
   <div id="whiteboard-tools">
     <button onclick="setTool('pen')">Pen</button>
     <button onclick="setTool('eraser')">Eraser</button>
     <button onclick="setTool('line')">Line</button>
+    <button onclick="setTool('dotted')">Dotted Line</button>
+    <button onclick="setTool('curve')">Curve</button>
     <button onclick="setTool('rect')">Rectangle</button>
     <button onclick="setTool('circle')">Circle</button>
     <button onclick="setTool('ellipse')">Ellipse</button>
@@ -27,167 +117,149 @@ body {margin:0;font-family:'Lora', serif;background:#f4f4f7; display:flex; flex-
     <button onclick="setTool('star')">Star</button>
     <button onclick="setTool('arrow')">Arrow</button>
     <button onclick="setTool('polygon')">Polygon</button>
+    <button onclick="setTool('text')">Text</button>
+    <button onclick="addSticky()">Sticky Note</button>
     <button onclick="clearBoard()">Clear All</button>
+
     <label>Color: <input type="color" id="colorPicker" value="#000000"></label>
     <label>Width: <input type="number" id="widthPicker" value="3" min="1" max="50"></label>
+    <label>Font Size: <input type="number" id="fontSize" value="20" min="10" max="72"></label>
+    <label>Font: 
+      <select id="fontStyle">
+        <option value="Arial">Arial</option>
+        <option value="Verdana">Verdana</option>
+        <option value="Times New Roman">Times New Roman</option>
+        <option value="Courier New">Courier New</option>
+      </select>
+    </label>
   </div>
   <canvas id="whiteboard"></canvas>
 </div>
 
 <script>
-const canvas = document.getElementById('whiteboard');
-const ctx = canvas.getContext('2d');
-let drawing = false, startX=0, startY=0;
-let tool='pen', color='#000', width=3;
-let tempCanvas = document.createElement('canvas');
-let tempCtx = tempCanvas.getContext('2d');
+// --- Canvas Setup ---
+const canvas=document.getElementById('whiteboard');
+const ctx=canvas.getContext('2d');
+let tempCanvas=document.createElement('canvas');
+let tempCtx=tempCanvas.getContext('2d');
+let drawing=false, startX=0, startY=0, tool='pen';
+let color='#000', width=3, fontSize=20, fontStyle='Arial';
 
-// Resize canvas
+// Resize
 function resizeCanvas(){
-    canvas.width = canvas.offsetWidth;
-    canvas.height = canvas.offsetHeight;
-    tempCanvas.width = canvas.width;
-    tempCanvas.height = canvas.height;
+  canvas.width=canvas.offsetWidth;
+  canvas.height=canvas.offsetHeight;
+  tempCanvas.width=canvas.width;
+  tempCanvas.height=canvas.height;
 }
 window.addEventListener('resize', resizeCanvas);
 resizeCanvas();
 
-// Tools
+// Tool selector
 function setTool(t){ tool=t; }
-function clearBoard(){ ctx.clearRect(0,0,canvas.width,canvas.height); }
 
-// Drawing
+// Clear
+function clearBoard(){
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+  document.querySelectorAll('.sticky-note').forEach(n=>n.remove());
+}
+
+// Position
+function getPos(e){
+  const rect=canvas.getBoundingClientRect();
+  let x,y;
+  if(e.touches){ x=e.touches[0].clientX-rect.left; y=e.touches[0].clientY-rect.top; }
+  else{ x=e.clientX-rect.left; y=e.clientY-rect.top; }
+  return {x,y};
+}
+
+// --- Sticky Notes ---
+function addSticky(){
+  const note=document.createElement('div');
+  note.classList.add('sticky-note');
+  note.style.top='100px';
+  note.style.left='100px';
+  note.innerHTML=`<div class="note-header">Note <button onclick="this.parentElement.parentElement.remove()">X</button></div><div contenteditable style="min-height:50px;"></div>`;
+  document.body.appendChild(note);
+  dragElement(note);
+}
+function dragElement(elmnt){
+  let pos1=0,pos2=0,pos3=0,pos4=0;
+  const header=elmnt.querySelector('.note-header');
+  if(header){ header.onmousedown=dragMouseDown; } else { elmnt.onmousedown=dragMouseDown; }
+  function dragMouseDown(e){
+    e.preventDefault();
+    pos3=e.clientX;
+    pos4=e.clientY;
+    document.onmouseup=closeDragElement;
+    document.onmousemove=elementDrag;
+  }
+  function elementDrag(e){
+    e.preventDefault();
+    pos1=pos3-e.clientX; pos2=pos4-e.clientY;
+    pos3=e.clientX; pos4=e.clientY;
+    elmnt.style.top=(elmnt.offsetTop-pos2)+'px';
+    elmnt.style.left=(elmnt.offsetLeft-pos1)+'px';
+  }
+  function closeDragElement(){ document.onmouseup=null; document.onmousemove=null; }
+}
+
+// --- Drawing ---
+canvas.addEventListener('mousedown',startDraw);
+canvas.addEventListener('mousemove',draw);
+canvas.addEventListener('mouseup',endDraw);
+canvas.addEventListener('mouseout',endDraw);
+canvas.addEventListener('touchstart',startDraw);
+canvas.addEventListener('touchmove',draw);
+canvas.addEventListener('touchend',endDraw);
+
 function startDraw(e){
-    drawing = true;
-    const pos = getPos(e);
-    startX=pos.x; startY=pos.y;
-    if(tool==='pen' || tool==='eraser'){
-        ctx.beginPath();
-        ctx.moveTo(startX,startY);
-    }
+  drawing=true;
+  const pos=getPos(e);
+  startX=pos.x; startY=pos.y;
+  color=document.getElementById('colorPicker').value;
+  width=parseInt(document.getElementById('widthPicker').value);
+  fontSize=parseInt(document.getElementById('fontSize').value);
+  fontStyle=document.getElementById('fontStyle').value;
+  if(tool==='pen'||tool==='eraser'){ ctx.beginPath(); ctx.moveTo(startX,startY); }
 }
 
 function draw(e){
-    if(!drawing) return;
-    const pos = getPos(e);
-    color = document.getElementById('colorPicker').value;
-    width = parseInt(document.getElementById('widthPicker').value);
-
-    if(tool==='pen'){
-        ctx.strokeStyle=color;
-        ctx.lineWidth=width;
-        ctx.lineCap='round';
-        ctx.lineTo(pos.x,pos.y);
-        ctx.stroke();
-    } else if(tool==='eraser'){
-        ctx.strokeStyle='#fff';
-        ctx.lineWidth=width*2;
-        ctx.lineCap='round';
-        ctx.lineTo(pos.x,pos.y);
-        ctx.stroke();
-    } else {
-        tempCtx.clearRect(0,0,tempCanvas.width,tempCanvas.height);
-        tempCtx.drawImage(canvas,0,0);
-        tempCtx.strokeStyle=color;
-        tempCtx.lineWidth=width;
-        tempCtx.setLineDash([5,5]); // preview
-        const w=pos.x-startX, h=pos.y-startY;
-
-        switch(tool){
-            case 'line':
-                tempCtx.beginPath(); tempCtx.moveTo(startX,startY); tempCtx.lineTo(pos.x,pos.y); tempCtx.stroke(); break;
-            case 'rect': tempCtx.strokeRect(startX,startY,w,h); break;
-            case 'circle': 
-                tempCtx.beginPath(); let r=Math.sqrt(w*w+h*h); tempCtx.arc(startX,startY,r,0,2*Math.PI); tempCtx.stroke(); break;
-            case 'ellipse':
-                tempCtx.beginPath(); tempCtx.ellipse(startX,startY,Math.abs(w),Math.abs(h),0,0,2*Math.PI); tempCtx.stroke(); break;
-            case 'triangle':
-                tempCtx.beginPath(); tempCtx.moveTo(startX,startY); tempCtx.lineTo(startX+w,startY+h); tempCtx.lineTo(startX-w,startY+h); tempCtx.closePath(); tempCtx.stroke(); break;
-            case 'star':
-                drawStar(tempCtx,startX,startY,5,Math.sqrt(w*w+h*h)/2,Math.sqrt(w*w+h*h)/4); break;
-            case 'arrow':
-                drawArrow(tempCtx,startX,startY,pos.x,pos.y); break;
-            case 'polygon':
-                drawPolygon(tempCtx,startX,startY,6,Math.sqrt(w*w+h*h)); break;
-        }
+  if(!drawing) return;
+  const pos=getPos(e);
+  if(tool==='pen'){ ctx.strokeStyle=color; ctx.lineWidth=width; ctx.lineCap='round'; ctx.lineTo(pos.x,pos.y); ctx.stroke(); }
+  else if(tool==='eraser'){ ctx.strokeStyle='#fff'; ctx.lineWidth=width*2; ctx.lineCap='round'; ctx.lineTo(pos.x,pos.y); ctx.stroke(); }
+  else if(['line','dotted','rect','circle','ellipse','triangle','star','arrow','polygon','curve'].includes(tool)){
+    tempCtx.clearRect(0,0,tempCanvas.width,tempCanvas.height);
+    tempCtx.drawImage(canvas,0,0);
+    tempCtx.strokeStyle=color; tempCtx.lineWidth=width;
+    if(tool==='dotted'){ tempCtx.setLineDash([5,5]); } else { tempCtx.setLineDash([]); }
+    const w=pos.x-startX, h=pos.y-startY;
+    switch(tool){
+      case 'line': tempCtx.beginPath(); tempCtx.moveTo(startX,startY); tempCtx.lineTo(pos.x,pos.y); tempCtx.stroke(); break;
+      case 'rect': tempCtx.strokeRect(startX,startY,w,h); break;
+      case 'circle': tempCtx.beginPath(); let r=Math.sqrt(w*w+h*h); tempCtx.arc(startX,startY,r,0,2*Math.PI); tempCtx.stroke(); break;
+      case 'ellipse': tempCtx.beginPath(); tempCtx.ellipse(startX,startY,Math.abs(w),Math.abs(h),0,0,2*Math.PI); tempCtx.stroke(); break;
+      case 'triangle': tempCtx.beginPath(); tempCtx.moveTo(startX,startY); tempCtx.lineTo(startX+w,startY+h); tempCtx.lineTo(startX-w,startY+h); tempCtx.closePath(); tempCtx.stroke(); break;
+      case 'star': drawStar(tempCtx,startX,startY,5,Math.sqrt(w*w+h*h)/2,Math.sqrt(w*w+h*h)/4); break;
+      case 'arrow': drawArrow(tempCtx,startX,startY,pos.x,pos.y); break;
+      case 'polygon': drawPolygon(tempCtx,startX,startY,6,Math.sqrt(w*w+h*h)); break;
+      case 'curve': tempCtx.beginPath(); tempCtx.moveTo(startX,startY); tempCtx.quadraticCurveTo(startX+(w/2),startY-h, pos.x,pos.y); tempCtx.stroke(); break;
     }
+  }
 }
 
 function endDraw(e){
-    if(!drawing) return;
-    drawing=false;
-    const pos=getPos(e);
-    ctx.strokeStyle=color;
-    ctx.lineWidth=width;
-    ctx.setLineDash([]);
-    const w=pos.x-startX, h=pos.y-startY;
-    switch(tool){
-        case 'line': ctx.beginPath(); ctx.moveTo(startX,startY); ctx.lineTo(pos.x,pos.y); ctx.stroke(); break;
-        case 'rect': ctx.strokeRect(startX,startY,w,h); break;
-        case 'circle': ctx.beginPath(); let r=Math.sqrt(w*w+h*h); ctx.arc(startX,startY,r,0,2*Math.PI); ctx.stroke(); break;
-        case 'ellipse': ctx.beginPath(); ctx.ellipse(startX,startY,Math.abs(w),Math.abs(h),0,0,2*Math.PI); ctx.stroke(); break;
-        case 'triangle': ctx.beginPath(); ctx.moveTo(startX,startY); ctx.lineTo(startX+w,startY+h); ctx.lineTo(startX-w,startY+h); ctx.closePath(); ctx.stroke(); break;
-        case 'star': drawStar(ctx,startX,startY,5,Math.sqrt(w*w+h*h)/2,Math.sqrt(w*w+h*h)/4); break;
-        case 'arrow': drawArrow(ctx,startX,startY,pos.x,pos.y); break;
-        case 'polygon': drawPolygon(ctx,startX,startY,6,Math.sqrt(w*w+h*h)); break;
-    }
+  if(!drawing) return;
+  drawing=false;
+  ctx.drawImage(tempCanvas,0,0);
+  tempCtx.clearRect(0,0,tempCanvas.width,tempCanvas.height);
 }
 
-// Utility
-function getPos(e){
-    const rect = canvas.getBoundingClientRect();
-    let x,y;
-    if(e.touches){ x=e.touches[0].clientX-rect.left; y=e.touches[0].clientY-rect.top;}
-    else{ x=e.clientX-rect.left; y=e.clientY-rect.top;}
-    return {x,y};
-}
-
-// Shape helpers
-function drawStar(c,x,y,points,outer,rInner){
-    const angle = Math.PI/points;
-    c.beginPath();
-    for(let i=0;i<2*points;i++){
-        const r=i%2===0?outer:rInner;
-        const a=i*angle-Math.PI/2;
-        c.lineTo(x+r*Math.cos(a),y+r*Math.sin(a));
-    }
-    c.closePath(); c.stroke();
-}
-
-function drawArrow(c,x1,y1,x2,y2){
-    const headLength=15;
-    const dx=x2-x1, dy=y2-y1;
-    const angle=Math.atan2(dy,dx);
-    c.beginPath(); c.moveTo(x1,y1); c.lineTo(x2,y2);
-    c.lineTo(x2-headLength*Math.cos(angle-Math.PI/6),y2-headLength*Math.sin(angle-Math.PI/6));
-    c.moveTo(x2,y2);
-    c.lineTo(x2-headLength*Math.cos(angle+Math.PI/6),y2-headLength*Math.sin(angle+Math.PI/6));
-    c.stroke();
-}
-
-function drawPolygon(c,x,y,sides,r){
-    c.beginPath();
-    for(let i=0;i<sides;i++){
-        const a=(2*Math.PI*i/sides)-Math.PI/2;
-        const px=x+r*Math.cos(a), py=y+r*Math.sin(a);
-        if(i===0) c.moveTo(px,py);
-        else c.lineTo(px,py);
-    }
-    c.closePath(); c.stroke();
-}
-
-// Events
-canvas.addEventListener('mousedown', startDraw);
-canvas.addEventListener('mousemove', draw);
-canvas.addEventListener('mouseup', endDraw);
-canvas.addEventListener('mouseout', endDraw);
-canvas.addEventListener('touchstart', startDraw);
-canvas.addEventListener('touchmove', draw);
-canvas.addEventListener('touchend', endDraw);
-
-// Merge temp canvas
-function mergeTemp(){ ctx.drawImage(tempCanvas,0,0); tempCtx.clearRect(0,0,tempCanvas.width,tempCanvas.height); }
-setInterval(()=>{ if(!drawing) mergeTemp(); },50);
+// --- Shape helpers ---
+function drawStar(c,x,y,points,outer,rInner){ const angle=Math.PI/points; c.beginPath(); for(let i=0;i<2*points;i++){ const r=i%2===0?outer:rInner; const a=i*angle-Math.PI/2; c.lineTo(x+r*Math.cos(a),y+r*Math.sin(a)); } c.closePath(); c.stroke(); }
+function drawArrow(c,x1,y1,x2,y2){ const headLength=15; const dx=x2-x1, dy=y2-y1, angle=Math.atan2(dy,dx); c.beginPath(); c.moveTo(x1,y1); c.lineTo(x2,y2); c.lineTo(x2-headLength*Math.cos(angle-Math.PI/6),y2-headLength*Math.sin(angle-Math.PI/6)); c.moveTo(x2,y2); c.lineTo(x2-headLength*Math.cos(angle+Math.PI/6),y2-headLength*Math.sin(angle+Math.PI/6)); c.stroke(); }
+function drawPolygon(c,x,y,sides,r){ c.beginPath(); for(let i=0;i<sides;i++){ const a=(2*Math.PI*i/sides)-Math.PI/2; const px=x+r*Math.cos(a), py=y+r*Math.sin(a); if(i===0) c.moveTo(px,py); else c.lineTo(px,py); } c.closePath(); c.stroke(); }
 </script>
 
 </body>
