--- a/whiteboard.html
+++ b/whiteboard.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Whiteboard</title>
-<!-- Google Fonts -->
+<!-- Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&family=Lora:wght@400;700&display=swap" rel="stylesheet">
 <style>
 :root{
@@ -47,7 +47,10 @@ h2{
   justify-content:center;
 }
 
-#whiteboard-tools button, #whiteboard-tools input[type=color], #whiteboard-tools input[type=number], #whiteboard-tools select{
+#whiteboard-tools button, 
+#whiteboard-tools input[type=color], 
+#whiteboard-tools input[type=number], 
+#whiteboard-tools select{
   padding:8px 14px;
   border-radius:8px;
   border:none;
@@ -69,6 +72,7 @@ h2{
   height:700px;
   background:#fff;
   display:block;
+  position:relative;
 }
 
 /* Sticky Notes */
@@ -101,7 +105,7 @@ h2{
   cursor:pointer;
 }
 
-/* Shape dropdown (hamburger) */
+/* Shape dropdown */
 .dropdown{
   position:relative;
   display:inline-block;
@@ -110,7 +114,7 @@ h2{
   display:none;
   position:absolute;
   background:#fff;
-  min-width:120px;
+  min-width:140px;
   box-shadow:0 8px 16px rgba(0,0,0,0.2);
   border-radius:8px;
   z-index:1000;
@@ -138,7 +142,6 @@ h2{
     <button onclick="setTool('pen')">Pen</button>
     <button onclick="setTool('eraser')">Eraser</button>
 
-    <!-- Shape Dropdown -->
     <div class="dropdown">
       <button>Shapes ▼</button>
       <div class="dropdown-content">
@@ -161,10 +164,13 @@ h2{
 
     <label>Color: <input type="color" id="colorPicker" value="#000000"></label>
     <label>Width: <input type="number" id="widthPicker" value="3" min="1" max="50"></label>
-
     <label>Font Size: <input type="number" id="fontSize" value="20" min="10" max="72"></label>
     <label>Font:
       <select id="fontStyle"></select>
+    </label>
+    <label>
+      <input type="checkbox" id="boldText"> Bold
+      <input type="checkbox" id="italicText"> Italic
     </label>
   </div>
 
@@ -190,6 +196,8 @@ let tempCanvas=document.createElement('canvas');
 let tempCtx=tempCanvas.getContext('2d');
 let drawing=false, startX=0, startY=0, tool='pen';
 let color='#000', width=3, fontSize=20, fontStyle='Arial';
+let objects=[]; // store all shapes/text for editing
+let selectedObj=null;
 
 function resizeCanvas(){
   canvas.width=canvas.offsetWidth;
@@ -200,10 +208,11 @@ function resizeCanvas(){
 window.addEventListener('resize', resizeCanvas);
 resizeCanvas();
 
-function setTool(t){ tool=t; }
+function setTool(t){ tool=t; selectedObj=null; }
 
 function clearBoard(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
+  objects=[];
   document.querySelectorAll('.sticky-note').forEach(n=>n.remove());
 }
 
@@ -266,44 +275,86 @@ function startDraw(e){
   width=parseInt(document.getElementById('widthPicker').value);
   fontSize=parseInt(document.getElementById('fontSize').value);
   fontStyle=document.getElementById('fontStyle').value;
-  if(tool==='pen'||tool==='eraser'){ ctx.beginPath(); ctx.moveTo(startX,startY); }
 }
 
 function draw(e){
   if(!drawing) return;
   const pos=getPos(e);
-  if(tool==='pen'){ ctx.strokeStyle=color; ctx.lineWidth=width; ctx.lineCap='round'; ctx.lineTo(pos.x,pos.y); ctx.stroke(); }
-  else if(tool==='eraser'){ ctx.strokeStyle='#fff'; ctx.lineWidth=width*2; ctx.lineCap='round'; ctx.lineTo(pos.x,pos.y); ctx.stroke(); }
-  else if(['line','dotted','rect','circle','ellipse','triangle','star','arrow','polygon','curve','text'].includes(tool)){
-    tempCtx.clearRect(0,0,tempCanvas.width,tempCanvas.height);
-    tempCtx.drawImage(canvas,0,0);
-    tempCtx.strokeStyle=color; tempCtx.lineWidth=width;
-    if(tool==='dotted'){ tempCtx.setLineDash([5,5]); } else { tempCtx.setLineDash([]); }
-    const w=pos.x-startX, h=pos.y-startY;
-    switch(tool){
-      case 'line': tempCtx.beginPath(); tempCtx.moveTo(startX,startY); tempCtx.lineTo(pos.x,pos.y); tempCtx.stroke(); break;
-      case 'dotted': tempCtx.beginPath(); tempCtx.moveTo(startX,startY); tempCtx.lineTo(pos.x,pos.y); tempCtx.stroke(); break;
-      case 'rect': tempCtx.strokeRect(startX,startY,w,h); break;
-      case 'circle': tempCtx.beginPath(); let r=Math.sqrt(w*w+h*h); tempCtx.arc(startX,startY,r,0,2*Math.PI); tempCtx.stroke(); break;
-      case 'ellipse': tempCtx.beginPath(); tempCtx.ellipse(startX,startY,Math.abs(w),Math.abs(h),0,0,2*Math.PI); tempCtx.stroke(); break;
-      case 'triangle': tempCtx.beginPath(); tempCtx.moveTo(startX,startY); tempCtx.lineTo(startX+w,startY+h); tempCtx.lineTo(startX-w,startY+h); tempCtx.closePath(); tempCtx.stroke(); break;
-      case 'star': drawStar(tempCtx,startX,startY,5,Math.sqrt(w*w+h*h)/2,Math.sqrt(w*w+h*h)/4); break;
-      case 'arrow': drawArrow(tempCtx,startX,startY,pos.x,pos.y); break;
-      case 'polygon': drawPolygon(tempCtx,startX,startY,6,Math.sqrt(w*w+h*h)); break;
-      case 'curve': tempCtx.beginPath(); tempCtx.moveTo(startX,startY); tempCtx.quadraticCurveTo(startX+(w/2),startY-h, pos.x,pos.y); tempCtx.stroke(); break;
-      case 'text': tempCtx.font=`${fontSize}px ${fontStyle}`; tempCtx.fillStyle=color; tempCtx.fillText("Sample Text",pos.x,pos.y); break;
-    }
+  tempCtx.clearRect(0,0,tempCanvas.width,tempCanvas.height);
+  tempCtx.drawImage(canvas,0,0);
+  tempCtx.strokeStyle=color; tempCtx.fillStyle=color; tempCtx.lineWidth=width;
+  if(tool==='dotted'){ tempCtx.setLineDash([5,5]); } else { tempCtx.setLineDash([]); }
+
+  const w=pos.x-startX, h=pos.y-startY;
+
+  switch(tool){
+    case 'line': tempCtx.beginPath(); tempCtx.moveTo(startX,startY); tempCtx.lineTo(pos.x,pos.y); tempCtx.stroke(); break;
+    case 'dotted': tempCtx.beginPath(); tempCtx.moveTo(startX,startY); tempCtx.lineTo(pos.x,pos.y); tempCtx.stroke(); break;
+    case 'rect': tempCtx.strokeRect(startX,startY,w,h); break;
+    case 'circle': tempCtx.beginPath(); tempCtx.arc(startX,startY,Math.sqrt(w*w+h*h),0,2*Math.PI); tempCtx.stroke(); break;
+    case 'ellipse': tempCtx.beginPath(); tempCtx.ellipse(startX,startY,Math.abs(w),Math.abs(h),0,0,2*Math.PI); tempCtx.stroke(); break;
+    case 'triangle': tempCtx.beginPath(); tempCtx.moveTo(startX,startY); tempCtx.lineTo(startX+w,startY+h); tempCtx.lineTo(startX-w,startY+h); tempCtx.closePath(); tempCtx.stroke(); break;
+    case 'star': drawStar(tempCtx,startX,startY,5,Math.sqrt(w*w+h*h)/2,Math.sqrt(w*w+h*h)/4); break;
+    case 'arrow': drawArrow(tempCtx,startX,startY,pos.x,pos.y); break;
+    case 'polygon': drawPolygon(tempCtx,startX,startY,6,Math.sqrt(w*w+h*h)); break;
+    case 'curve': tempCtx.beginPath(); tempCtx.moveTo(startX,startY); tempCtx.quadraticCurveTo(startX+(w/2),startY-h,pos.x,pos.y); tempCtx.stroke(); break;
+    case 'text': tempCtx.font=`${fontSize}px ${fontStyle}`; if(document.getElementById('boldText').checked) tempCtx.font='bold '+tempCtx.font; if(document.getElementById('italicText').checked) tempCtx.font='italic '+tempCtx.font; tempCtx.fillText("Sample Text",pos.x,pos.y); break;
+    case 'pen': tempCtx.beginPath(); tempCtx.moveTo(startX,startY); tempCtx.lineTo(pos.x,pos.y); tempCtx.stroke(); break;
+    case 'eraser': tempCtx.beginPath(); tempCtx.strokeStyle='#fff'; tempCtx.lineWidth=width*2; tempCtx.moveTo(startX,startY); tempCtx.lineTo(pos.x,pos.y); tempCtx.stroke(); break;
   }
 }
 
 function endDraw(e){
   if(!drawing) return;
   drawing=false;
-  ctx.drawImage(tempCanvas,0,0);
-  tempCtx.clearRect(0,0,tempCanvas.width,tempCanvas.height);
+  const pos=getPos(e);
+  if(tool==='text'){
+    let obj={type:'text', x:pos.x, y:pos.y, text:'', font:fontStyle, size:fontSize, color:color, bold:document.getElementById('boldText').checked, italic:document.getElementById('italicText').checked};
+    objects.push(obj);
+    createTextInput(obj);
+  } else {
+    ctx.drawImage(tempCanvas,0,0);
+    tempCtx.clearRect(0,0,tempCanvas.width,tempCanvas.height);
+  }
 }
 
-// Shape helpers
+// --- Text Input Overlay ---
+function createTextInput(obj){
+  const input=document.createElement('input');
+  input.type='text';
+  input.style.position='absolute';
+  input.style.left=obj.x+'px';
+  input.style.top=obj.y+'px';
+  input.style.fontFamily=obj.font;
+  input.style.fontSize=obj.size+'px';
+  input.style.color=obj.color;
+  if(obj.bold) input.style.fontWeight='bold';
+  if(obj.italic) input.style.fontStyle='italic';
+  document.body.appendChild(input);
+  input.focus();
+  input.onblur=function(){
+    obj.text=input.value;
+    document.body.removeChild(input);
+    drawObjects();
+  }
+}
+
+// --- Draw all objects ---
+function drawObjects(){
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+  objects.forEach(o=>{
+    if(o.type==='text'){
+      ctx.font=`${o.size}px ${o.font}`;
+      if(o.bold) ctx.font='bold '+ctx.font;
+      if(o.italic) ctx.font='italic '+ctx.font;
+      ctx.fillStyle=o.color;
+      ctx.fillText(o.text,o.x,o.y);
+    }
+    // Future: handle shapes, sticky notes in objects
+  });
+}
+
+// --- Shape helpers ---
 function drawStar(c,x,y,points,outer,rInner){ const angle=Math.PI/points; c.beginPath(); for(let i=0;i<2*points;i++){ const r=i%2===0?outer:rInner; const a=i*angle-Math.PI/2; c.lineTo(x+r*Math.cos(a),y+r*Math.sin(a)); } c.closePath(); c.stroke(); }
 function drawArrow(c,x1,y1,x2,y2){ const headLength=15; const dx=x2-x1, dy=y2-y1, angle=Math.atan2(dy,dx); c.beginPath(); c.moveTo(x1,y1); c.lineTo(x2,y2); c.lineTo(x2-headLength*Math.cos(angle-Math.PI/6),y2-headLength*Math.sin(angle-Math.PI/6)); c.moveTo(x2,y2); c.lineTo(x2-headLength*Math.cos(angle+Math.PI/6),y2-headLength*Math.sin(angle+Math.PI/6)); c.stroke(); }
 function drawPolygon(c,x,y,sides,r){ c.beginPath(); for(let i=0;i<sides;i++){ const a=(2*Math.PI*i/sides)-Math.PI/2; const px=x+r*Math.cos(a), py=y+r*Math.sin(a); if(i===0) c.moveTo(px,py); else c.lineTo(px,py); } c.closePath(); c.stroke(); }
