--- a/whiteboard.html
+++ b/whiteboard.html
@@ -17,7 +17,18 @@
   --vv-orange:#ff9800;
 }
 
-body {
+/* Main page blur effect */
+body.blur-bg::before{
+  content:'';
+  position:fixed;
+  top:0; left:0;
+  width:100%; height:100%;
+  backdrop-filter:blur(6px);
+  background-color:rgba(0,0,0,0.1);
+  z-index:999;
+}
+
+body{
   margin:0;
   font-family:'Lora', serif;
   background: var(--vv-light);
@@ -31,6 +42,11 @@ body {
   margin:20px auto;
   padding:0 20px;
   width:100%;
+  z-index:1000;
+  position:relative;
+  background:white;
+  border-radius:12px;
+  box-shadow:0 6px 20px rgba(0,0,0,0.2);
 }
 
 h2{
@@ -45,6 +61,7 @@ h2{
   gap:10px;
   margin-bottom:10px;
   justify-content:center;
+  align-items:center;
 }
 
 #whiteboard-tools button, 
@@ -178,6 +195,9 @@ h2{
 </div>
 
 <script>
+// --- Blur background effect ---
+document.body.classList.add('blur-bg');
+
 // --- Fonts ---
 const fonts=["Arial","Verdana","Times New Roman","Courier New","Georgia","Trebuchet MS","Impact","Comic Sans MS","Tahoma","Lucida Console","Palatino","Garamond","Bookman","Candara","Monaco","Futura","Century Gothic","Calibri","Optima","Franklin Gothic"];
 const fontSelect=document.getElementById('fontStyle');
@@ -196,27 +216,35 @@ let tempCanvas=document.createElement('canvas');
 let tempCtx=tempCanvas.getContext('2d');
 let drawing=false, startX=0, startY=0, tool='pen';
 let color='#000', width=3, fontSize=20, fontStyle='Arial';
-let objects=[]; // store all shapes/text for editing
-let selectedObj=null;
+let objects=[]; 
+let textCursor={x:0,y:0,visible:false,lines:[],lineHeight:0};
 
+// Resize canvas
 function resizeCanvas(){
   canvas.width=canvas.offsetWidth;
   canvas.height=canvas.offsetHeight;
   tempCanvas.width=canvas.width;
   tempCanvas.height=canvas.height;
+  drawObjects();
 }
 window.addEventListener('resize', resizeCanvas);
 resizeCanvas();
 
-function setTool(t){ tool=t; selectedObj=null; }
+// --- Tools ---
+function setTool(t){
+  tool=t; 
+  textCursor.visible=false;
+}
 
+// --- Clear Board ---
 function clearBoard(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
   objects=[];
+  textCursor.visible=false;
   document.querySelectorAll('.sticky-note').forEach(n=>n.remove());
 }
 
-// --- Position ---
+// --- Mouse / Touch position ---
 function getPos(e){
   const rect=canvas.getBoundingClientRect();
   let x,y;
@@ -243,8 +271,7 @@ function dragElement(elmnt){
   if(header){ header.onmousedown=dragMouseDown; } else { elmnt.onmousedown=dragMouseDown; }
   function dragMouseDown(e){
     e.preventDefault();
-    pos3=e.clientX;
-    pos4=e.clientY;
+    pos3=e.clientX; pos4=e.clientY;
     document.onmouseup=closeDragElement;
     document.onmousemove=elementDrag;
   }
@@ -259,13 +286,13 @@ function dragElement(elmnt){
 }
 
 // --- Drawing ---
-canvas.addEventListener('mousedown',startDraw);
-canvas.addEventListener('mousemove',draw);
-canvas.addEventListener('mouseup',endDraw);
-canvas.addEventListener('mouseout',endDraw);
-canvas.addEventListener('touchstart',startDraw);
-canvas.addEventListener('touchmove',draw);
-canvas.addEventListener('touchend',endDraw);
+canvas.addEventListener('mousedown', startDraw);
+canvas.addEventListener('mousemove', draw);
+canvas.addEventListener('mouseup', endDraw);
+canvas.addEventListener('mouseout', endDraw);
+canvas.addEventListener('touchstart', startDraw);
+canvas.addEventListener('touchmove', draw);
+canvas.addEventListener('touchend', endDraw);
 
 function startDraw(e){
   drawing=true;
@@ -275,89 +302,112 @@ function startDraw(e){
   width=parseInt(document.getElementById('widthPicker').value);
   fontSize=parseInt(document.getElementById('fontSize').value);
   fontStyle=document.getElementById('fontStyle').value;
+
+  if(tool==='text'){
+    textCursor.visible=true;
+    textCursor.x=startX;
+    textCursor.y=startY;
+    textCursor.lines=[''];
+    textCursor.lineHeight=fontSize*1.2;
+    drawObjects();
+  }
 }
 
 function draw(e){
   if(!drawing) return;
   const pos=getPos(e);
-  tempCtx.clearRect(0,0,tempCanvas.width,tempCanvas.height);
-  tempCtx.drawImage(canvas,0,0);
-  tempCtx.strokeStyle=color; tempCtx.fillStyle=color; tempCtx.lineWidth=width;
-  if(tool==='dotted'){ tempCtx.setLineDash([5,5]); } else { tempCtx.setLineDash([]); }
+  if(tool==='text'){
+    // Only move cursor
+    textCursor.x=pos.x;
+    textCursor.y=pos.y;
+    drawObjects();
+  } else {
+    // Other drawing tools
+    tempCtx.clearRect(0,0,tempCanvas.width,tempCanvas.height);
+    tempCtx.drawImage(canvas,0,0);
+    tempCtx.strokeStyle=color; tempCtx.fillStyle=color; tempCtx.lineWidth=width;
+    if(tool==='dotted'){ tempCtx.setLineDash([5,5]); } else { tempCtx.setLineDash([]); }
 
-  const w=pos.x-startX, h=pos.y-startY;
+    const w=pos.x-startX, h=pos.y-startY;
 
-  switch(tool){
-    case 'line': tempCtx.beginPath(); tempCtx.moveTo(startX,startY); tempCtx.lineTo(pos.x,pos.y); tempCtx.stroke(); break;
-    case 'dotted': tempCtx.beginPath(); tempCtx.moveTo(startX,startY); tempCtx.lineTo(pos.x,pos.y); tempCtx.stroke(); break;
-    case 'rect': tempCtx.strokeRect(startX,startY,w,h); break;
-    case 'circle': tempCtx.beginPath(); tempCtx.arc(startX,startY,Math.sqrt(w*w+h*h),0,2*Math.PI); tempCtx.stroke(); break;
-    case 'ellipse': tempCtx.beginPath(); tempCtx.ellipse(startX,startY,Math.abs(w),Math.abs(h),0,0,2*Math.PI); tempCtx.stroke(); break;
-    case 'triangle': tempCtx.beginPath(); tempCtx.moveTo(startX,startY); tempCtx.lineTo(startX+w,startY+h); tempCtx.lineTo(startX-w,startY+h); tempCtx.closePath(); tempCtx.stroke(); break;
-    case 'star': drawStar(tempCtx,startX,startY,5,Math.sqrt(w*w+h*h)/2,Math.sqrt(w*w+h*h)/4); break;
-    case 'arrow': drawArrow(tempCtx,startX,startY,pos.x,pos.y); break;
-    case 'polygon': drawPolygon(tempCtx,startX,startY,6,Math.sqrt(w*w+h*h)); break;
-    case 'curve': tempCtx.beginPath(); tempCtx.moveTo(startX,startY); tempCtx.quadraticCurveTo(startX+(w/2),startY-h,pos.x,pos.y); tempCtx.stroke(); break;
-    case 'text': tempCtx.font=`${fontSize}px ${fontStyle}`; if(document.getElementById('boldText').checked) tempCtx.font='bold '+tempCtx.font; if(document.getElementById('italicText').checked) tempCtx.font='italic '+tempCtx.font; tempCtx.fillText("Sample Text",pos.x,pos.y); break;
-    case 'pen': tempCtx.beginPath(); tempCtx.moveTo(startX,startY); tempCtx.lineTo(pos.x,pos.y); tempCtx.stroke(); break;
-    case 'eraser': tempCtx.beginPath(); tempCtx.strokeStyle='#fff'; tempCtx.lineWidth=width*2; tempCtx.moveTo(startX,startY); tempCtx.lineTo(pos.x,pos.y); tempCtx.stroke(); break;
+    switch(tool){
+      case 'line': tempCtx.beginPath(); tempCtx.moveTo(startX,startY); tempCtx.lineTo(pos.x,pos.y); tempCtx.stroke(); break;
+      case 'dotted': tempCtx.beginPath(); tempCtx.moveTo(startX,startY); tempCtx.lineTo(pos.x,pos.y); tempCtx.stroke(); break;
+      case 'rect': tempCtx.strokeRect(startX,startY,w,h); break;
+      case 'circle': tempCtx.beginPath(); tempCtx.arc(startX,startY,Math.sqrt(w*w+h*h),0,2*Math.PI); tempCtx.stroke(); break;
+      case 'ellipse': tempCtx.beginPath(); tempCtx.ellipse(startX,startY,Math.abs(w),Math.abs(h),0,0,2*Math.PI); tempCtx.stroke(); break;
+      case 'triangle': tempCtx.beginPath(); tempCtx.moveTo(startX,startY); tempCtx.lineTo(startX+w,startY+h); tempCtx.lineTo(startX-w,startY+h); tempCtx.closePath(); tempCtx.stroke(); break;
+      case 'star': drawStar(tempCtx,startX,startY,5,Math.sqrt(w*w+h*h)/2,Math.sqrt(w*w+h*h)/4); break;
+      case 'arrow': drawArrow(tempCtx,startX,startY,pos.x,pos.y); break;
+      case 'polygon': drawPolygon(tempCtx,startX,startY,6,Math.sqrt(w*w+h*h)); break;
+      case 'curve': tempCtx.beginPath(); tempCtx.moveTo(startX,startY); tempCtx.quadraticCurveTo(startX+(w/2),startY-h,pos.x,pos.y); tempCtx.stroke(); break;
+      case 'pen': tempCtx.beginPath(); tempCtx.moveTo(startX,startY); tempCtx.lineTo(pos.x,pos.y); tempCtx.stroke(); break;
+      case 'eraser': tempCtx.beginPath(); tempCtx.strokeStyle='#fff'; tempCtx.lineWidth=width*2; tempCtx.moveTo(startX,startY); tempCtx.lineTo(pos.x,pos.y); tempCtx.stroke(); break;
+    }
   }
 }
 
 function endDraw(e){
   if(!drawing) return;
   drawing=false;
-  const pos=getPos(e);
-  if(tool==='text'){
-    let obj={type:'text', x:pos.x, y:pos.y, text:'', font:fontStyle, size:fontSize, color:color, bold:document.getElementById('boldText').checked, italic:document.getElementById('italicText').checked};
-    objects.push(obj);
-    createTextInput(obj);
-  } else {
-    ctx.drawImage(tempCanvas,0,0);
-    tempCtx.clearRect(0,0,tempCanvas.width,tempCanvas.height);
-  }
+  if(tool!=='text'){ ctx.drawImage(tempCanvas,0,0); tempCtx.clearRect(0,0,tempCanvas.width,tempCanvas.height); }
 }
 
-// --- Text Input Overlay ---
-function createTextInput(obj){
-  const input=document.createElement('input');
-  input.type='text';
-  input.style.position='absolute';
-  input.style.left=obj.x+'px';
-  input.style.top=obj.y+'px';
-  input.style.fontFamily=obj.font;
-  input.style.fontSize=obj.size+'px';
-  input.style.color=obj.color;
-  if(obj.bold) input.style.fontWeight='bold';
-  if(obj.italic) input.style.fontStyle='italic';
-  document.body.appendChild(input);
-  input.focus();
-  input.onblur=function(){
-    obj.text=input.value;
-    document.body.removeChild(input);
+// --- Handle keyboard typing for text ---
+document.addEventListener('keydown', e=>{
+  if(tool==='text' && textCursor.visible){
+    if(e.key==='Backspace'){
+      let line=textCursor.lines[textCursor.lines.length-1];
+      if(line.length>0) textCursor.lines[textCursor.lines.length-1]=line.slice(0,-1);
+      else if(textCursor.lines.length>1) textCursor.lines.pop();
+      e.preventDefault();
+    } else if(e.key==='Enter'){
+      textCursor.lines.push('');
+      e.preventDefault();
+    } else if(e.key.length===1){
+      textCursor.lines[textCursor.lines.length-1]+=e.key;
+    }
     drawObjects();
   }
-}
+});
 
-// --- Draw all objects ---
+// --- Draw objects and text cursor ---
 function drawObjects(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
+  // Draw saved objects
   objects.forEach(o=>{
     if(o.type==='text'){
       ctx.font=`${o.size}px ${o.font}`;
       if(o.bold) ctx.font='bold '+ctx.font;
       if(o.italic) ctx.font='italic '+ctx.font;
       ctx.fillStyle=o.color;
-      ctx.fillText(o.text,o.x,o.y);
+      o.lines.forEach((line,i)=>{
+        ctx.fillText(line,o.x,o.y+i*o.lineHeight);
+      });
     }
-    // Future: handle shapes, sticky notes in objects
   });
+
+  // Draw text cursor text live
+  if(tool==='text' && textCursor.visible){
+    ctx.font=`${fontSize}px ${fontStyle}`;
+    if(document.getElementById('boldText').checked) ctx.font='bold '+ctx.font;
+    if(document.getElementById('italicText').checked) ctx.font='italic '+ctx.font;
+    ctx.fillStyle=color;
+    textCursor.lines.forEach((line,i)=>{
+      ctx.fillText(line,textCursor.x,textCursor.y+i*textCursor.lineHeight);
+    });
+    // Draw blinking cursor
+    const cursorX=textCursor.x+ctx.measureText(textCursor.lines[textCursor.lines.length-1]).width;
+    const cursorY=textCursor.y+(textCursor.lines.length-1)*textCursor.lineHeight;
+    ctx.fillRect(cursorX,cursorY-parseInt(fontSize*0.8),2,fontSize);
+  }
 }
 
 // --- Shape helpers ---
 function drawStar(c,x,y,points,outer,rInner){ const angle=Math.PI/points; c.beginPath(); for(let i=0;i<2*points;i++){ const r=i%2===0?outer:rInner; const a=i*angle-Math.PI/2; c.lineTo(x+r*Math.cos(a),y+r*Math.sin(a)); } c.closePath(); c.stroke(); }
 function drawArrow(c,x1,y1,x2,y2){ const headLength=15; const dx=x2-x1, dy=y2-y1, angle=Math.atan2(dy,dx); c.beginPath(); c.moveTo(x1,y1); c.lineTo(x2,y2); c.lineTo(x2-headLength*Math.cos(angle-Math.PI/6),y2-headLength*Math.sin(angle-Math.PI/6)); c.moveTo(x2,y2); c.lineTo(x2-headLength*Math.cos(angle+Math.PI/6),y2-headLength*Math.sin(angle+Math.PI/6)); c.stroke(); }
 function drawPolygon(c,x,y,sides,r){ c.beginPath(); for(let i=0;i<sides;i++){ const a=(2*Math.PI*i/sides)-Math.PI/2; const px=x+r*Math.cos(a), py=y+r*Math.sin(a); if(i===0) c.moveTo(px,py); else c.lineTo(px,py); } c.closePath(); c.stroke(); }
+
 </script>
 
 </body>
